add_library(samples_common OBJECT mglsamp.c ../../../src/common/cmdline.c)
target_link_libraries(samples_common PRIVATE mgl::mgl)

function(add_mgl_sample NAME)
    add_executable(${NAME} ${ARGN} $<TARGET_OBJECTS:samples_common>)
    target_link_libraries(${NAME} PRIVATE mgl::mgl)# gm-static mgl-static)
endfunction()

add_mgl_sample(bitblt bitblt.c bitblt.def)
add_mgl_sample(cliprgn cliprgn.c cliprgn.def)
add_mgl_sample(ellipses ellipses.c ellipses.def)
add_mgl_sample(lines lines.c lines.def)
add_mgl_sample(mgldemo mgldemo.c mgldemo.def)
add_mgl_sample(mouse mouse.c mouse.def)
add_mgl_sample(mousedb mousedb.c mousedb.def)
add_mgl_sample(pageflip pageflip.c pageflip.def)
add_mgl_sample(palette palette.c palette.def)
add_mgl_sample(pixelfmt pixelfmt.c pixelfmt.def)
add_mgl_sample(polys polys.c polys.def)
add_mgl_sample(rects rects.c rects.def)
add_mgl_sample(regions regions.c regions.def)
add_mgl_sample(sprites sprites.c sprites.def)
add_mgl_sample(alpha alpha.c alpha.def)
add_mgl_sample(stretch stretch.c stretch.def)
add_mgl_sample(textdemo textdemo.c textdemo.def)
add_mgl_sample(viewport viewport.c viewport.def)
add_mgl_sample(loadbmp loadbmp.c loadbmp.def)
add_mgl_sample(loadpcx loadpcx.c loadpcx.def)
add_mgl_sample(loadjpeg loadjpeg.c loadjpeg.def)
add_mgl_sample(loadpng loadpng.c loadpng.def)
add_mgl_sample(truetype truetype.c truetype.def)
add_mgl_sample(copypage copypage.c copypage.def)
add_mgl_sample(refresh refresh.c refresh.def)
add_mgl_sample(flip flip.c flip.def)
add_mgl_sample(blend blend.c blend.def)
add_mgl_sample(arcs arcs.c arcs.def)
add_executable(sample_test ../../../src/pm/tests/test.c)
target_link_libraries(sample_test PRIVATE mgl::mgl)
