function(add_opengl_demo NAME)
    add_executable(${NAME} ${ARGN} demo.rc)
    target_link_libraries(${NAME} PRIVATE mgl::mgl)
    if(MGL_PLATFORM_LINUX)
        target_link_libraries(${NAME} PRIVATE m)
    endif()
endfunction()

add_opengl_demo(ogl_glbounce glbounce.c)
add_opengl_demo(ogl_isosurf isosurf.c)
add_opengl_demo(ogl_morph3d morph3d.c)
add_opengl_demo(ogl_wave wave.c)
add_opengl_demo(ogl_gears2 gears2.c)
add_opengl_demo(ogl_moth moth.c)
add_opengl_demo(ogl_rings rings.c)
add_opengl_demo(ogl_steam steam.c)
add_opengl_demo(ogl_fractals fractals.c)
add_opengl_demo(ogl_mech mech.c)
add_opengl_demo(ogl_gears gears.c)
add_opengl_demo(ogl_morph2 morph2.c)
add_opengl_demo(ogl_logo ogl_logo.c def_logo.c)
